compileLab/CS1409_U201414797_张丹朱_lab1/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | %empty

   34 Def: Specifier DecList SEMI
   35    | Specifier error SEMI

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGNNOP Exp

   40 Exp: Exp ASSIGNNOP Exp
   41    | Exp AND Exp
   42    | Exp OR Exp
   43    | Exp RELOP Exp
   44    | Exp PLUS Exp
   45    | Exp MINUS Exp
   46    | Exp STAR Exp
   47    | Exp DIV Exp
   48    | LP Exp RP
   49    | MINUS Exp
   50    | NOT Exp
   51    | ID LP Args RP
   52    | ID LP RP
   53    | Exp LB Exp RB
   54    | Exp DOT ID
   55    | ID
   56    | INT
   57    | FLOAT

   58 Args: Exp COMMA Args
   59     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 35
TYPE (258) 9
INT (259) 17 56
FLOAT (260) 57
ID (261) 13 15 16 18 19 51 52 54 55
IF (262) 29 30
ELSE (263) 30
WHILE (264) 31
RETURN (265) 28
STRUCT (266) 11 12
SEMI (267) 4 5 26 28 34 35
COMMA (268) 8 20 37 58
ASSIGNNOP (269) 39 40
RELOP (270) 43
PLUS (271) 44
MINUS (272) 45 49
STAR (273) 46
DIV (274) 47
AND (275) 41
OR (276) 42
DOT (277) 54
NOT (278) 50
LP (279) 18 19 29 30 31 48 51 52
RP (280) 18 19 29 30 31 48 51 52
LB (281) 17 53
RB (282) 17 53
LC (283) 11 23
RC (284) 11 23
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6, 右： 2
ExtDecList (35)
    左： 7 8, 右： 4 8
Specifier (36)
    左： 9 10, 右： 4 5 6 22 34 35
StructSpecifier (37)
    左： 11 12, 右： 10
OptTag (38)
    左： 13 14, 右： 11
Tag (39)
    左： 15, 右： 12
VarDec (40)
    左： 16 17, 右： 7 8 17 22 38 39
FunDec (41)
    左： 18 19, 右： 6
VarList (42)
    左： 20 21, 右： 18 20
ParamDec (43)
    左： 22, 右： 20 21
CompSt (44)
    左： 23, 右： 6 27
StmtList (45)
    左： 24 25, 右： 23 24
Stmt (46)
    左： 26 27 28 29 30 31, 右： 24 29 30 31
DefList (47)
    左： 32 33, 右： 11 23 32
Def (48)
    左： 34 35, 右： 32
DecList (49)
    左： 36 37, 右： 34 37
Dec (50)
    左： 38 39, 右： 36 37
Exp (51)
    左： 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57, 右：
    26 28 29 30 31 39 40 41 42 43 44 45 46 47 48 49 50 53 54 58 59
Args (52)
    左： 58 59, 右： 51 58


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  转到状态 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 26
    Def              转到状态 27


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 28

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    VarList          转到状态 30
    ParamDec         转到状态 31


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  转到状态 33
    VarDec      转到状态 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 23

   23 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 35
    Def              转到状态 27


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   34 Def: Specifier . DecList SEMI
   35    | Specifier . error SEMI

    error  shift, and go to state 36
    ID     shift, and go to state 32

    VarDec   转到状态 37
    DecList  转到状态 38
    Dec      转到状态 39


State 26

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 40


State 27

   32 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 27


State 28

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 29

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 32

    VarDec  转到状态 42


State 30

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 43


State 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 44

    $default  reduce using rule 21 (VarList)


State 32

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 33

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 34

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 35

   23 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    ID      shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    RETURN  shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    CompSt    转到状态 55
    StmtList  转到状态 56
    Stmt      转到状态 57
    Exp       转到状态 58


State 36

   35 Def: Specifier error . SEMI

    SEMI  shift, and go to state 59


State 37

   17 VarDec: VarDec . LB INT RB
   38 Dec: VarDec .
   39    | VarDec . ASSIGNNOP Exp

    ASSIGNNOP  shift, and go to state 60
    LB         shift, and go to state 22

    $default  reduce using rule 38 (Dec)


State 38

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 61


State 39

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 36 (DecList)


State 40

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 41

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 42

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 43

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 44

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    VarList          转到状态 63
    ParamDec         转到状态 31


State 45

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 46

   56 Exp: INT .

    $default  reduce using rule 56 (Exp)


State 47

   57 Exp: FLOAT .

    $default  reduce using rule 57 (Exp)


State 48

   51 Exp: ID . LP Args RP
   52    | ID . LP RP
   55    | ID .

    LP  shift, and go to state 64

    $default  reduce using rule 55 (Exp)


State 49

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 65


State 50

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 66


State 51

   28 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 67


State 52

   49 Exp: MINUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 68


State 53

   50 Exp: NOT . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 69


State 54

   48 Exp: LP . Exp RP

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 70


State 55

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 56

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 71


State 57

   24 StmtList: Stmt . StmtList

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    ID      shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    RETURN  shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    CompSt    转到状态 55
    StmtList  转到状态 72
    Stmt      转到状态 57
    Exp       转到状态 58


State 58

   26 Stmt: Exp . SEMI
   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    SEMI       shift, and go to state 73
    ASSIGNNOP  shift, and go to state 74
    RELOP      shift, and go to state 75
    PLUS       shift, and go to state 76
    MINUS      shift, and go to state 77
    STAR       shift, and go to state 78
    DIV        shift, and go to state 79
    AND        shift, and go to state 80
    OR         shift, and go to state 81
    DOT        shift, and go to state 82
    LB         shift, and go to state 83


State 59

   35 Def: Specifier error SEMI .

    $default  reduce using rule 35 (Def)


State 60

   39 Dec: VarDec ASSIGNNOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 84


State 61

   34 Def: Specifier DecList SEMI .

    $default  reduce using rule 34 (Def)


State 62

   37 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   转到状态 37
    DecList  转到状态 85
    Dec      转到状态 39


State 63

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 64

   51 Exp: ID LP . Args RP
   52    | ID LP . RP

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    RP     shift, and go to state 86

    Exp   转到状态 87
    Args  转到状态 88


State 65

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 89


State 66

   31 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 90


State 67

   28 Stmt: RETURN Exp . SEMI
   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    SEMI       shift, and go to state 91
    ASSIGNNOP  shift, and go to state 74
    RELOP      shift, and go to state 75
    PLUS       shift, and go to state 76
    MINUS      shift, and go to state 77
    STAR       shift, and go to state 78
    DIV        shift, and go to state 79
    AND        shift, and go to state 80
    OR         shift, and go to state 81
    DOT        shift, and go to state 82
    LB         shift, and go to state 83


State 68

   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   49    | MINUS Exp .
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    DOT   shift, and go to state 82
    LB    shift, and go to state 83

    $default  reduce using rule 49 (Exp)


State 69

   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   50    | NOT Exp .
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    DOT  shift, and go to state 82
    LB   shift, and go to state 83

    $default  reduce using rule 50 (Exp)


State 70

   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | LP Exp . RP
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    ASSIGNNOP  shift, and go to state 74
    RELOP      shift, and go to state 75
    PLUS       shift, and go to state 76
    MINUS      shift, and go to state 77
    STAR       shift, and go to state 78
    DIV        shift, and go to state 79
    AND        shift, and go to state 80
    OR         shift, and go to state 81
    DOT        shift, and go to state 82
    RP         shift, and go to state 92
    LB         shift, and go to state 83


State 71

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 72

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 73

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 74

   40 Exp: Exp ASSIGNNOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 93


State 75

   43 Exp: Exp RELOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 94


State 76

   44 Exp: Exp PLUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 95


State 77

   45 Exp: Exp MINUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 96


State 78

   46 Exp: Exp STAR . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 97


State 79

   47 Exp: Exp DIV . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 98


State 80

   41 Exp: Exp AND . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 99


State 81

   42 Exp: Exp OR . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 100


State 82

   54 Exp: Exp DOT . ID

    ID  shift, and go to state 101


State 83

   53 Exp: Exp LB . Exp RB

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 102


State 84

   39 Dec: VarDec ASSIGNNOP Exp .
   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    ASSIGNNOP  shift, and go to state 74
    RELOP      shift, and go to state 75
    PLUS       shift, and go to state 76
    MINUS      shift, and go to state 77
    STAR       shift, and go to state 78
    DIV        shift, and go to state 79
    AND        shift, and go to state 80
    OR         shift, and go to state 81
    DOT        shift, and go to state 82
    LB         shift, and go to state 83

    $default  reduce using rule 39 (Dec)


State 85

   37 DecList: Dec COMMA DecList .

    $default  reduce using rule 37 (DecList)


State 86

   52 Exp: ID LP RP .

    $default  reduce using rule 52 (Exp)


State 87

   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID
   58 Args: Exp . COMMA Args
   59     | Exp .

    COMMA      shift, and go to state 103
    ASSIGNNOP  shift, and go to state 74
    RELOP      shift, and go to state 75
    PLUS       shift, and go to state 76
    MINUS      shift, and go to state 77
    STAR       shift, and go to state 78
    DIV        shift, and go to state 79
    AND        shift, and go to state 80
    OR         shift, and go to state 81
    DOT        shift, and go to state 82
    LB         shift, and go to state 83

    $default  reduce using rule 59 (Args)


State 88

   51 Exp: ID LP Args . RP

    RP  shift, and go to state 104


State 89

   29 Stmt: IF LP Exp . RP Stmt
   30     | IF LP Exp . RP Stmt ELSE Stmt
   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID

    ASSIGNNOP  shift, and go to state 74
    RELOP      shift, and go to state 75
    PLUS       shift, and go to state 76
    MINUS      shift, and go to state 77
    STAR       shift, and go to state 78
    DIV        shift, and go to state 79
    AND        shift, and go to state 80
    OR         shift, and go to state 81
    DOT        shift, and go to state 82
    RP         shift, and go to state 105
    LB         shift, and go to state 83


State 90

   31 Stmt: WHILE LP Exp . RP Stmt
   40 Exp: Exp . ASSIGNNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   54    | Exp . DOT ID
